Bug fix for order_by_feature, plus new custom ordering

--- a/an_rnn_example.ipynb
+++ b/an_rnn_example.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 274,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def t1(rp,d2):\n",
+    "    d1 = 0.5*np.array([1,1,np.sqrt(2)])\n",
+    "    if np.all(d1 == d2):\n",
+    "        print(\"parallel lines!\")\n",
+    "        return 0\n",
+    "    numerator=np.multiply(rp,d1-(np.dot(d2,d1).reshape(-1,1)*d2)).sum(1).reshape(-1,1)\n",
+    "    denominator=(1- np.dot(d2,d1).reshape(-1,1)**2)\n",
+    "    t1 = numerator/denominator\n",
+    "    return t1.reshape(-1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
    "metadata": {
     "scrolled": false
    },
@@ -280,7 +298,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 5.94 s\n"
+      "Wall time: 36 s\n"
      ]
     }
    ],
@@ -290,13 +308,206 @@
     "\n",
     "for i,jet in enumerate(Xordered[:,0:]):\n",
     "    nan_ind=np.where(np.isnan(Xordered[i]))[0][0]\n",
-    "    Xordered[i,0:nan_ind] = jet[np.linalg.norm(jet[:nan_ind,:2],axis=1).argsort()[::-1]]\n",
-    "\n"
+    "#     Xordered[i,0:nan_ind] = jet[np.linalg.norm(jet[:nan_ind,:2],axis=1).argsort()[::-1]]\n",
+    "    rps=np.roll(jet[:nan_ind,[1,5,6]],-1,axis=1)\n",
+    "    phis=jet[:nan_ind,2]\n",
+    "    thetas=jet[:nan_ind,3]\n",
+    "    dvecs=np.array([np.cos(phis)*np.sin(thetas),np.sin(phis)*np.sin(thetas),np.cos(thetas)]).transpose()\n",
+    "#     print(np.linalg.norm(jet[:nan_ind,:2],axis=1))\n",
+    "#     print(t1(rps,dvecs))\n",
+    "    Xordered[i,0:nan_ind] = jet[t1(rps,dvecs).argsort()[::-1]]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4.41 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "Xordered2 = copy.copy(X)#\n",
+    "\n",
+    "for i,jet in enumerate(Xordered2[:,0:]):\n",
+    "    nan_ind=np.where(np.isnan(Xordered2[i]))[0][0]\n",
+    "    Xordered2[i,0:] = jet[np.abs(jet[:,0]).argsort()[::-1]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.05830249e-04, -1.45472865e-04,  5.30583772e-01,\n",
+       "         4.89086541e-01,  9.99412432e-04,  1.19483459e-04,\n",
+       "         2.81524145e-04],\n",
+       "       [ 5.81706742e-05, -2.02371339e-05,  7.64656196e-01,\n",
+       "         7.32375348e-01,  5.36291326e-05,  2.52564871e-05,\n",
+       "         5.24016908e-05],\n",
+       "       [ 1.42863386e-04,  2.09467670e-04,  7.01922575e-01,\n",
+       "         1.02040053e+00,  5.28920613e-04, -1.38308268e-04,\n",
+       "        -3.57878464e-05],\n",
+       "       [ 4.55400141e-04,  6.46656090e-04,  1.12861577e+00,\n",
+       "         1.23239874e+00,  9.43747403e-03,  2.52833420e-04,\n",
+       "        -3.78767145e-04],\n",
+       "       [ 2.13819548e-04,  6.92451573e-04,  8.54149012e-01,\n",
+       "         1.26119640e+00,  5.58770664e-04, -1.07515812e-04,\n",
+       "        -1.84821940e-04],\n",
+       "       [ 8.62929489e-05, -7.41331289e-05,  8.14444879e-01,\n",
+       "         7.69719294e-01,  2.30363439e-04,  5.19130012e-05,\n",
+       "         6.89312218e-05],\n",
+       "       [ 2.79096796e-04,  4.15360720e-05,  1.04527452e+00,\n",
+       "         8.50500942e-01,  7.07238344e-04,  2.20922701e-04,\n",
+       "        -1.70552577e-04],\n",
+       "       [ 6.69848830e-06, -7.78649556e-06,  7.98312937e-01,\n",
+       "         8.52188491e-01,  3.94778366e-04,  4.73654650e-06,\n",
+       "         4.73654650e-06],\n",
+       "       [ 1.08408655e-05,  1.22507440e-05,  7.66796184e-01,\n",
+       "         7.02927593e-01,  4.86856787e-04,  7.66564952e-06,\n",
+       "         7.66564952e-06],\n",
+       "       [ 3.08243932e-06, -5.86855058e-06,  7.75427002e-01,\n",
+       "         7.64369310e-01,  4.24610760e-04,  2.17961375e-06,\n",
+       "         2.17961375e-06],\n",
+       "       [ 1.61719965e-06, -5.30715821e-06,  8.46417574e-01,\n",
+       "         9.36954436e-01,  3.02544065e-03,  1.14353284e-06,\n",
+       "         1.14353284e-06]])"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[0][:np.where(np.isnan(X[0]))[0][0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 3.05830249e-04, -1.45472865e-04,  5.30583772e-01,\n",
+       "          4.89086541e-01,  9.99412432e-04],\n",
+       "        [ 5.81706742e-05, -2.02371339e-05,  7.64656196e-01,\n",
+       "          7.32375348e-01,  5.36291326e-05],\n",
+       "        [ 1.42863386e-04,  2.09467670e-04,  7.01922575e-01,\n",
+       "          1.02040053e+00,  5.28920613e-04],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan]],\n",
+       "\n",
+       "       [[ 8.50586559e-06,  1.42732970e-05,  7.11617924e-01,\n",
+       "          8.11134019e-01,  2.71907786e-05],\n",
+       "        [ 1.68451427e-04,  1.35026882e-04,  9.13364587e-01,\n",
+       "          7.90664528e-01,  4.25837488e-04],\n",
+       "        [ 1.01041139e-04, -9.38823750e-05,  8.81771422e-01,\n",
+       "          7.33789675e-01,  1.63262055e-04],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan]],\n",
+       "\n",
+       "       [[ 2.68789478e-04,  3.75422262e-04,  7.74509352e-01,\n",
+       "          9.67751320e-01,  7.58568680e-04],\n",
+       "        [ 8.61392200e-05,  8.83495734e-05,  7.83340632e-01,\n",
+       "          8.36039961e-01,  3.60566492e-05],\n",
+       "        [ 2.08089819e-04, -1.66899781e-04,  8.01008434e-01,\n",
+       "          6.78612568e-01,  8.81798165e-05],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 4.49668294e-04, -2.11179606e-04,  5.62090329e-01,\n",
+       "          5.90002408e-01,  4.39534396e-04],\n",
+       "        [ 2.73957361e-04,  4.11738297e-04,  7.28733017e-01,\n",
+       "          1.02050011e+00,  2.24001515e-04],\n",
+       "        [ 7.76825985e-05, -7.00933115e-05,  8.11419304e-01,\n",
+       "          7.46641153e-01,  5.81741394e-05],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan]],\n",
+       "\n",
+       "       [[ 2.74264044e-04, -1.02972485e-04,  5.94037110e-01,\n",
+       "          6.51393949e-01,  2.58925911e-04],\n",
+       "        [ 7.54262913e-05,  2.61803739e-06,  8.60007618e-01,\n",
+       "          7.82066497e-01,  5.32321746e-05],\n",
+       "        [ 2.77648052e-04,  2.10420688e-04,  9.85787245e-01,\n",
+       "          9.53719973e-01,  3.17505749e-04],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan]],\n",
+       "\n",
+       "       [[ 5.76696428e-05, -1.63258188e-05,  7.61102586e-01,\n",
+       "          7.72135301e-01,  1.54324608e-04],\n",
+       "        [ 4.46531103e-04,  1.09106720e-03,  9.58693745e-01,\n",
+       "          1.26335779e+00,  3.04961412e-04],\n",
+       "        [ 4.28316278e-04, -3.04532129e-04,  8.09321337e-01,\n",
+       "          6.08281169e-01,  1.71731804e-03],\n",
+       "        ...,\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan],\n",
+       "        [            nan,             nan,             nan,\n",
+       "                     nan,             nan]]])"
+      ]
+     },
+     "execution_count": 301,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X[:,:,:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -305,15 +516,15 @@
        "array([[ 4.55400141e-04,  6.46656090e-04,  1.12861577e+00,\n",
        "         1.23239874e+00,  9.43747403e-03,  2.52833420e-04,\n",
        "        -3.78767145e-04],\n",
-       "       [ 2.13819548e-04,  6.92451573e-04,  8.54149012e-01,\n",
-       "         1.26119640e+00,  5.58770664e-04, -1.07515812e-04,\n",
-       "        -1.84821940e-04],\n",
        "       [ 3.05830249e-04, -1.45472865e-04,  5.30583772e-01,\n",
        "         4.89086541e-01,  9.99412432e-04,  1.19483459e-04,\n",
        "         2.81524145e-04],\n",
        "       [ 2.79096796e-04,  4.15360720e-05,  1.04527452e+00,\n",
        "         8.50500942e-01,  7.07238344e-04,  2.20922701e-04,\n",
        "        -1.70552577e-04],\n",
+       "       [ 2.13819548e-04,  6.92451573e-04,  8.54149012e-01,\n",
+       "         1.26119640e+00,  5.58770664e-04, -1.07515812e-04,\n",
+       "        -1.84821940e-04],\n",
        "       [ 1.42863386e-04,  2.09467670e-04,  7.01922575e-01,\n",
        "         1.02040053e+00,  5.28920613e-04, -1.38308268e-04,\n",
        "        -3.57878464e-05],\n",
@@ -334,73 +545,75 @@
        "         2.17961375e-06],\n",
        "       [ 1.61719965e-06, -5.30715821e-06,  8.46417574e-01,\n",
        "         9.36954436e-01,  3.02544065e-03,  1.14353284e-06,\n",
-       "         1.14353284e-06],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan],\n",
-       "       [            nan,             nan,             nan,\n",
-       "                    nan,             nan,             nan,\n",
-       "                    nan]])"
+       "         1.14353284e-06]])"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 295,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Xordered[0]"
+    "Xordered2[0][19:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.04100893e-03],\n",
+       "       [ 1.04819180e-03],\n",
+       "       [ 1.05014016e-03],\n",
+       "       [ 1.56413698e-03],\n",
+       "       [ 1.56949313e-03],\n",
+       "       [ 2.35164948e-03],\n",
+       "       [ 1.38491207e-03],\n",
+       "       [-1.50801197e-04],\n",
+       "       [ 4.53070007e-06],\n",
+       "       [ 2.69447651e-04],\n",
+       "       [-3.17316382e-05]])"
+      ]
+     },
+     "execution_count": 262,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1(rps,dvecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 263,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00104101]])"
+      ]
+     },
+     "execution_count": 263,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t1(np.array([ 1.19483459e-04,  2.81524145e-04, -1.45472865e-04]),np.array([0.40522505, 0.23774613, 0.88276239]))"
    ]
   },
   {
